Add service account file to .gitignore

--- a/phison_realestate_backend/.gitignore
+++ b/phison_realestate_backend/.gitignore
@@ -273,3 +273,6 @@ tags
 phison_realestate_backend/media/
 
 .pytest_cache/
+
+# Firebase service account file
+phison-real-estate-firebase-adminsdk.json
