Setup graphql for django project

--- a/phison_realestate_backend/.gitignore
+++ b/phison_realestate_backend/.gitignore
@@ -276,3 +276,4 @@ phison_realestate_backend/media/
 
 # Firebase service account file
 phison-real-estate-firebase-adminsdk.json
+hamsa-lomi-firebase-adminsdk-43q07-016131b2e9.json
