--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
