--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        cd phison_realestate_backend && pip install -r requirements.txt
+        cd phison_realestate_backend && pip install -r requirements/local.txt
     - name: Run Tests
       run: |
         cd phison_realestate_backend && pytest
