--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,7 +14,11 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.8]
-
+    env:
+      DB_DATABASE: test_db
+      DB_USER: root
+      DB_PASSWORD: root
+      DATABASE_URL: mysql://root:root@127.0.0.1:3306/test_db
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,6 +29,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd phison_realestate_backend && pip install -r requirements/local.txt
+    - name: Set up MySQL DB
+      run: |
+        sudo /etc/init.d/mysql start
+        mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
     - name: Run Tests
       run: |
         cd phison_realestate_backend && pytest
