--- a/phison_realestate_mobile/.vscode/settings.json
+++ b/phison_realestate_mobile/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
   "java.configuration.updateBuildConfiguration": "interactive",
-  "cmake.configureOnOpen": true
+  "cmake.configureOnOpen": true,
+  "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  // Remove .fvm files from search
+  "search.exclude": {
+    "**/.fvm": true
+  },
+  // Remove from file watching
+  "files.watcherExclude": {
+    "**/.fvm": true
+  }
 }
