--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   firebase_core: ^2.1.1
   flutter:
     sdk: flutter
+  flutter_map: ^3.1.0
   flutter_otp_text_field: ^1.1.1
   flutter_svg: ^1.1.6
   intl_phone_field: ^3.1.0
+  latlong2: ^0.8.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
