--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^1.1.6
   intl_phone_field: ^3.1.0
   latlong2: ^0.8.1
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
