--- a/phison_realestate_mobile/android/app/src/main/AndroidManifest.xml
+++ b/phison_realestate_mobile/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.phison_realestate_mobile">
    <application
-        android:label="phison_realestate_mobile"
+        android:label="Phison Realestate"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/phison_app_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
