--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^1.1.6
   formz: ^0.4.1
   graphql: ^5.1.2
+  infinite_scroll_pagination: ^3.2.0
   intl_phone_field: ^3.1.0
   json_annotation: ^4.7.0
   latlong2: ^0.8.1
