--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl_phone_field: ^3.1.0
   json_annotation: ^4.7.0
   latlong2: ^0.8.1
+  timeago: ^3.3.0
   youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
