--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   firebase_auth: ^4.2.5
@@ -49,6 +50,7 @@ dependencies:
   json_annotation: ^4.7.0
   latlong2: ^0.8.1
   timeago: ^3.3.0
+  youtube: ^1.0.1
   youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
