--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_flavor: ^3.1.1
   flutter_map: ^3.1.0
+  flutter_native_splash: ^2.2.17
   flutter_otp_text_field: ^1.1.1
   flutter_svg: ^1.1.6
   formz: ^0.4.1
