Rename android package name

--- a/phison_realestate_mobile/android/app/src/main/AndroidManifest.xml
+++ b/phison_realestate_mobile/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.phison">
+    package="com.phisonrealestate.android">
    <application
         android:label="Phison Realestate"
         android:name="${applicationName}"
