--- a/phison_realestate_mobile/pubspec.yaml
+++ b/phison_realestate_mobile/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_flavor: ^3.1.1
   flutter_map: ^3.1.0
-  flutter_native_splash: ^2.2.17
   flutter_otp_text_field: ^1.1.1
   flutter_svg: ^1.1.6
   formz: ^0.4.1
@@ -57,6 +56,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.3
   change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
