--- a/phison_realestate_backend/requirements.txt
+++ b/phison_realestate_backend/requirements.txt
@@ -1,3 +1,3 @@
 # This file is for digital ocean purpose only. https://github.com/cookiecutter/cookiecutter-django/issues/3710#issuecomment-1420710917
 
--r production.txt
+-r requirements/production.txt
